<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TaskerDetailScreenFragment">

    <ImageView
        android:id="@+id/imgTasker"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:foreground="@drawable/border_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNameAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="Name, Age"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTasker" />

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameAge" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="I have alot of expertise in my area of work. I have done many jobs in the app. Given the oppurtunity I can show how perfect and effiecently my work gets done!"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTask" />

    <Button
        android:id="@+id/btnHire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSchedule"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:text="@string/schedule_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvPromoCode"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/promocode"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchedule" />

    <TextView
        android:id="@+id/tvApply"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/apply"
        android:textAlignment="center"
        android:textColor="@color/app_green"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/etPromocode"
        app:layout_constraintTop_toBottomOf="@+id/tvSchedule" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_up_input"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvSchedule"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <EditText
        android:id="@+id/etPromocode"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_up_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/enter_promocode"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvPromoCode"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_up_input"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/time"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPromocode" />


</androidx.constraintlayout.widget.ConstraintLayout>